--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,8 @@ services:
   backend:
     build: ./backend
     container_name: backend
+    # environment:
+    #   - DJANGO_SETTINGS_MODULE=setup.settings
     volumes:
       - ./backend/project:/project
     restart: on-failure
