--- a/frontend/conf/nginx.conf
+++ b/frontend/conf/nginx.conf
@@ -21,7 +21,7 @@ server {
     }
 
     # Proxy pass to Django backend through Daphne
-    location ~ ^/(auth|remote|admin|users|deluser|setup|2fa/setup|2fa/verify) {
+    location ~ ^/(auth|remote|admin|users|setup|2fa) {
         proxy_pass http://backend:8000;  # Pass to the Daphne backend
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
