setting up tournament

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,25 +1,18 @@
 FROM python:3.8-slim
 
-RUN apt-get update -y && apt-get install gcc -y 
+RUN apt-get update -y && apt-get install gcc -y && pip install --upgrade pip
 
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-
-# Install dependencies
-RUN pip install --upgrade pip
-COPY tools/dependencies.txt .
-RUN pip3 install -r ./dependencies.txt
-
-# Copy project
 COPY ./project /project
-COPY tools/script.sh /
-RUN chmod +x /script.sh
-
 WORKDIR /project
-RUN python -m venv .env
-RUN echo "source .env/bin/activate" >> ~/.bashrc
-RUN python3 manage.py makemigrations && python3 manage.py migrate
-EXPOSE 8000
+COPY tools/dependencies.txt .
+
+RUN python -m venv .env && \
+	echo "source .env/bin/activate" >> ~/.bashrc && \
+	pip3 install -r ./dependencies.txt && \
+	python3 manage.py makemigrations && \
+	python3 manage.py migrate
 
 CMD ["daphne", "-b", "0.0.0.0", "-p", "8000", "setup.asgi:application"]
