--- a/frontend/conf/nginx.conf
+++ b/frontend/conf/nginx.conf
@@ -1,15 +1,3 @@
-# server {
-#     listen 8001;
-#     server_name localhost;
-    
-#     location / {
-#         autoindex on;
-#         root /var/www/html/;
-#         index index.html;
-#     }
-# }
-
-# nginx/nginx.conf
 server {
     listen 81;
 
@@ -21,7 +9,7 @@ server {
     }
 
     # Proxy pass to Django backend through Daphne
-    location ~ ^/(auth|remote|admin|users) {
+    location ~ ^/(auth|remote|admin|users|chat) {
         proxy_pass http://backend:8000;  # Pass to the Daphne backend
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -31,7 +19,7 @@ server {
         # proxy_send_timeout 3600;
     }
 
-    location /ws/pong/ {
+    location /ws/ {
         proxy_pass http://backend:8000;  # Pass to the Daphne backend
         proxy_http_version 1.1;  # Required for WebSocket connections
         proxy_set_header Upgrade $http_upgrade;  # Handle WebSocket upgrade
@@ -43,4 +31,16 @@ server {
         # proxy_read_timeout 3600;  # Increase timeout to handle long-running WebSocket connections
         # proxy_send_timeout 3600;  # Increase timeout for sending data over the WebSocket
     }
+    # location /ws/chat/ {
+    #     proxy_pass http://backend:8000;  # Pass to the Daphne backend
+    #     proxy_http_version 1.1;  # Required for WebSocket connections
+    #     proxy_set_header Upgrade $http_upgrade;  # Handle WebSocket upgrade
+    #     proxy_set_header Connection "upgrade";  # Handle WebSocket upgrade
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header X-Forwarded-Proto $scheme;
+    #     # proxy_read_timeout 3600;  # Increase timeout to handle long-running WebSocket connections
+    #     # proxy_send_timeout 3600;  # Increase timeout for sending data over the WebSocket
+    # }
 }
