Update Dockerfile and script.sh

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,17 +4,12 @@ RUN apt-get update -y && apt-get install gcc -y && pip install --upgrade pip
 
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
-# ENV DJANGO_SETTINGS_MODULE=setup.settings
 
-
-COPY ./project /project
-WORKDIR /project
-COPY tools/dependencies.txt .
+COPY tools/ .
 
 RUN python -m venv .env && \
-	echo "source .env/bin/activate" >> ~/.bashrc && \
+	echo "source .env/bin/activate" >> .bashrc && \
 	pip3 install -r ./dependencies.txt && \
-	python3 manage.py makemigrations && \
-	python3 manage.py migrate
+	chmod +x script.sh
 
-CMD ["daphne", "-b", "0.0.0.0", "-p", "8000", "setup.asgi:application"]
+CMD ["/script.sh"]
