--- a/frontend/conf/nginx.conf
+++ b/frontend/conf/nginx.conf
@@ -21,7 +21,7 @@ server {
     }
 
     # Proxy pass to Django backend through Daphne
-    location ~ ^/(auth|remote|admin|users|setup|deluser|2fa|token) {
+    location ~ ^/(auth|remote|admin|users|setup|deluser|2fa|token|chat) {
         proxy_pass http://backend:8000;  # Pass to the Daphne backend
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -31,7 +31,7 @@ server {
         # proxy_send_timeout 3600;
     }
 
-    location /ws/pong/ {
+    location /ws/ {
         proxy_pass http://backend:8000;  # Pass to the Daphne backend
         proxy_http_version 1.1;  # Required for WebSocket connections
         proxy_set_header Upgrade $http_upgrade;  # Handle WebSocket upgrade
