basic tournament and online

--- a/frontend/conf/nginx.conf
+++ b/frontend/conf/nginx.conf
@@ -9,7 +9,7 @@ server {
     }
 
     # Proxy pass to Django backend through Daphne
-    location ~ ^/(auth|remote|admin|users|setup|deluser|2fa|token) {
+    location ~ ^/(auth|remote|admin|users|setup|deluser|2fa|token|chat) {
         proxy_pass http://backend:8000;  # Pass to the Daphne backend
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
