--- a/frontend/conf/nginx.conf
+++ b/frontend/conf/nginx.conf
@@ -1,6 +1,8 @@
 server {
-    listen 81;
+    listen 81 ssl;
 
+    ssl_certificate /etc/nginx/ssl/transcendence.crt;
+    ssl_certificate_key /etc/nginx/ssl/transcendence.key;
     # Serve frontend static files
     location / {
         root /var/www/html/;
