setup ssl certificate in backend and nginx -https-

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,6 +11,10 @@ RUN python -m venv .env && \
 	echo "source .env/bin/activate" >> .bashrc && \
 	pip3 install -r ./dependencies.txt
 
+RUN mkdir -p /etc/ssl
+
+RUN openssl req -x509 -nodes -days 365 -newkey rsa:4096 -keyout  /etc/ssl/backend.key -subj "/C=MA/ST=Martil/L=Martil/O=42Network/OU=1337/CN=ft_transcendence" -out /etc/ssl/backend.crt
+
 RUN chmod +x script.sh
 
 ENTRYPOINT ["/script.sh"]
