--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,6 +27,7 @@ services:
 
   db:
     image: postgres:latest
+    container_name: postgres
     environment:
       POSTGRES_DB: db
       POSTGRES_USER: oussama
@@ -35,6 +36,14 @@ services:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - frontend
+
+  redis:
+    image: redis:latest
+    container_name: redis
+    networks:
+      - frontend
+    # ports:
+    #   - "6379:6379" 
 networks:
   frontend:
     driver: bridge
